# SC.DDLExportScripts

./: .coveragerc  .env  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .snowstudio-ci.yml  LEGAL.md  README.md  VERSION  VERSION-UPDATE.sh  config_snowsql.ini  requirements-test.txt  setup.sh  vertica-client-9.1.1-0.x86_64.tar.gz.REMOVED.git-id
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/docs/: README.md  RELEASE_PROCESS.md  WORKFLOWS.md
.github/hooks/: README.md  check-version-update.sh
.github/scripts/: common-normalize-version.sh  install-hooks.sh  post-clone-message.sh
.github/workflows/: cd.yml  check-hooks.yml  ci.yml  codeql-analysis.yml  common-build-assets.yml  common-pr-draft.yml  common-reusable-build.yml  export-tools-build-and-publish-to-test-pypi.yml  migrations-pr-draft.yml  migrations-pr-precommit.yml  package-scripts.yml  prepare-release.yml  prerelease.yml  publish-release.yml  publish-to-test-pypi.yml  release-all-ci.yml  release-push-scripts.yml  release-set-version.yml  release.yml  teradata-export-build-and-publish-to-test-pypi.yml  test-etl-scripts.yml  upload-release-assets.yml  use-build.yml
ALTERNATIVE_SQLServer_Extraction_Methods/PowerShellScripts/: Revision-History.txt
AlternativeSQLServerExtractionMethods/: README.md
AlternativeSQLServerExtractionMethods/PowerShellScripts/: README.md
BigQuery/: License.txt  README.md
DB2/: README.md  useful_db2_scripts.md
Databricks/: Databricks_workload_query.dbc  Download_jobs_sources.dbc  README.md
Databricks/workload_analysis/: Databricks_workload_query.dbc
ETL/Informatica PowerCenter/: README.md  export_all_workflows.py
Hive/: README.md  exp_ddl.sh
Netezza/: Environment-Setup.txt  Instructions.rtf  License.txt  README.md  nz_ddl -help output.txt
Oracle/: .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.rst  create_ddls_sql.sql  readme.md  sc-oracle-export  sc-oracle-export.ps1  setup.cfg
Oracle/doc/: README.rtf
Oracle/oraexport/: __main__.py
Oracle/oraexport/scripts/: install_sqlcl.sh
Oracle/scripts/: create_ddls.sql  create_ddls_plus.sql  split_files.sh
Power BI/: License.txt  README.md  bulk-convert-pbix-to-pbit.ps1
Redshift/: README.md  Redshift - Extract DDL.txt
Redshift/Code/: Assembly_exec_sqls.r  COM-ES-Scripts-sql2sf.py  execute_bash.bash  output.csv
Redshift/doc/: redshift_migration.md
Redshift/output/: businessentitycontact.sql  countryregioncurrency.sql  creditcard.sql  culture.sql  customer.sql  document.sql  illustration.sql  jobcandidate.sql  password.sql  person.sql  personcreditcard.sql  personphone.sql  product.sql  productdescription.sql  productdocument.sql  productinventory.sql  productmodel.sql  productmodelproductdescriptionculture.sql  productreview.sql  productsubcategory.sql  productvendor.sql  salesorderdetail.sql  salestaxrate.sql  schemas.sql  specialoffer.sql  specialofferproduct.sql  store.sql  (+3 more)
SQLServer/: .gitattributes  .gitignore  CHANGES.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  Revision-History.txt  install_powershell.sh  readme.md  requirements.txt  sc-sqlserver-arrange  sc-sqlserver-arrange.bat  sc-sqlserver-export  sc-sqlserver-export.ps1  setup.cfg  setup.py
SQLServer/doc/: installation_guide.md  usage_guide.md
SQLServer/sqlarrange/: __main__.py
SQLServer/sqlexport/: __init__.py  __main__.py
Scripts/: SFConfig.py  VerticaConfig.py  VerticaDBCalls.py  vertMain.py
Sybase IQ/: README.md
Synapse/: Create_ddls.ps1  Create_ddls.sh  License.txt  README.md
Teradata/: .gitignore  LICENSE.txt  License.txt  MANIFEST.in  README.md  README.rst  READ_ME.md  READ_ME.rtf  install_from_source.sh  readme.md  sc-tera-export  sc-tera-extract-snippets  sc-tera-restore-snippets  sc-tera-split-ddl  setup.cfg  setup.py
Teradata/doc/: READ_ME.md  installation_guide.md  usage_guide.md
Teradata/scripts/: create_ddls copy.btq  create_ddls.btq  create_reports.btq  create_sample_inserts.btq  create_tpt_script.btq  create_usage_reports.btq  data_profiling.btq  invalid_objects.btq
Teradata/scripts_template/: create_databases.btq  create_ddls.btq  create_functions.btq  create_join_indexes.btq  create_macros.btq  create_procedures.btq  create_schemas.btq  create_tables.btq  create_triggers.btq  create_views.btq
Teradata/sf_objects/: Helper_Functions.sql  SF_Sys_Calendar.sql
Teradata/split/: __init__.py  __main__.py
Teradata/teraexport/: __init__.py  __main__.py
Teradata/teraexport/scripts/: create_ddls.btq  create_reports.btq  create_sample_inserts.btq  create_tpt_script.btq  create_usage_reports.btq  invalid_objects.btq
Vertica/: README.md  VerticaReadme.md  install-vertica.sh  requirements.txt  sfConf.txt
VerticaLab/: requirements.txt  vertica-client-9.1.1-0.x86_64.tar.REMOVED.git-id  verticaConf.txt
tests/: testutils.py
(+210 files in other folders)
