[bdist_wheel]
universal =1

[metadata]
name = snowconvert-export-oracle
version = 0.0.10
author = Mauricio Rojas
author_email = mauricio.rojas@mobilize.net
description = Mobilize.Net Oracle Export Tool for SnowConvert
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE.txt

python_requires='>=3'

url = https://github.com/mobilize/SnowConvertDDLExportScripts/Oracle
project_urls =
    Bug Tracker = https://github.com/MobilizeNet/SnowConvertDDLExportScripts/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License

[options]
scripts=
    sc-oracle-export

[flake8]
ignore =
    # E501: line too long.
    E501,
    # F401, imported but unused, ignore where we import setup.
    F401,
    # E402 module level import not at top of file. 
    # To maintain py2 - 3 compat certain orders of import is necessary.
    E402