[bdist_wheel]
universal =1

[metadata]
name = snowconvert-export-sqlserver
version = 0.0.1
author = Mauricio Rojas
author_email = mauricio.rojas@mobilize.net
description = Mobilize.Net SQLServer Export Tool for SnowConvert
long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE.txt

python_requires='>=2.6, >=3'

project_urls =
    Bug Tracker = https://github.com/MobilizeNet/SnowConvertDDLExportScripts/issues

[flake8]
ignore =
    # E501: line too long.
    E501,
    # F401, imported but unused, ignore where we import setup.
    F401,
    # E402 module level import not at top of file. 
    # To maintain py2 - 3 compat certain orders of import is necessary.
    E402

# Explicitly specifying what files/directories we check 
# in case user creates a virtual environment in repo, 
# forgoing the need for them to modify this file to ignore their venv directory.
filename =
    ./sqlexport/*.py