[bdist_wheel]
universal =1

[metadata]
name = snowconvert-export-tera
version = 0.0.1a2
author = Mauricio Rojas
author_email = mauricio.rojas@mobilize.net
description = Mobilize.Net Teradata Export Tool for SnowConvert
long_description = file: README.rst
license_file = LICENSE.txt

python_requires='>=2.6, >=3'

url = https://github.com/mobilize/SnowConvertDDLExportScripts/Teradata
project_urls =
    Bug Tracker = https://github.com/MobilizeNet/SnowConvertDDLExportScripts/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License

[options]
include_package_data=True
scripts=
    sc-tera-export
    sc-tera-split-ddl
packages =
    teraexport
#install_requires =
#    future>=0.16.0
#    wheel>=0.29.0    
#    enum34;python_version<'3.4'


[options.packages.find]
where = sc-export-tera

[flake8]
ignore =
    # E501: line too long.
    E501,
    # F401, imported but unused, ignore where we import setup.
    F401,
    # E402 module level import not at top of file. 
    # To maintain py2 - 3 compat certain orders of import is necessary.
    E402

# Explicitly specifying what files/directories we check 
# in case user creates a virtual environment in repo, 
# forgoing the need for them to modify this file to ignore their venv directory.
filename =
    ./teraexport/*.py